@startuml
hide circle
skinparam classAttributeIconSize 0

skinparam linetype ortho


class TableTypeController {
    - _tableTypeRepository: ITableTypeRepository
    + DeleteTableType(Guid id): Task<IActionResult> 
}

interface ITableTypeRepository<<interface>> {
    + DeleteTableType(Guid id): Task<IActionResult> 
   }

class TableTypeRepository {
    - _tableTypeDao: TableTypeDAO
    + DeleteTableType(Guid id): Task<IActionResult> 
}

class TableTypeDAO {
    - _client: Client
    + DeleteTableType(Guid id): Task<IActionResult>
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO> 
}
class TableType {
    + Id: Guid
    + Name: string
    + Description: string

    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}
class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}

TableTypeController -- ITableTypeRepository
ITableTypeRepository <|-- TableTypeRepository
TableTypeRepository -- TableTypeDAO

TableTypeDAO -- TableType
TableTypeDAO -- Table
@enduml
